@@ -530,6 +530,10 @@ the graph browser tool.
 
 *** HOL ***
 
+* constant "List.op @" now named "List.append".  Use ML antiquotations
+@{const_name List.append} or @{term " ... @ ... "} to circumvent
+possible incompatibilities when working on ML level.
+
 * Constant renames due to introduction of canonical name prefixing for
   class package:
 
